Boutique qui marche

--- a/frontend/src/app/filtre/filtre.component.html
+++ b/frontend/src/app/filtre/filtre.component.html
@@ -1,8 +1,8 @@
 <label>
-    <span>Saisir un nom.</span>
+    <span>Saisir un nom : </span>
     <input type="text" [(ngModel)]="filtreNom" (input)="updateFilter()">
 </label>
 <label>
-    <span>Saisir un prix max.</span>
+    <span>Saisir un prix maximal : </span>
     <input type="number" [(ngModel)]="filtrePrixMax" (input)="updateFilter()">
 </label>
